doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\north\Desktop\Java\Random
-d
C:\Users\north\Desktop\Java\Random\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\north\Desktop\Java\Random\Instructions.java
<---- end of javadoc command ---->
Loading source file C:\Users\north\Desktop\Java\Random\Instructions.java...
Constructing Javadoc information...
C:\Users\north\Desktop\Java\Random\Instructions.java:34: error: type String does not take parameters
    public String<String> Intructions(){
                 ^
Standard Doclet version 1.8.0_121
Building tree for all the packages and classes...
Generating C:\Users\north\Desktop\Java\Random\doc\Instructions.html...
Generating C:\Users\north\Desktop\Java\Random\doc\package-frame.html...
Generating C:\Users\north\Desktop\Java\Random\doc\package-summary.html...
Generating C:\Users\north\Desktop\Java\Random\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\north\Desktop\Java\Random\doc\allclasses-frame.html...
Generating C:\Users\north\Desktop\Java\Random\doc\allclasses-noframe.html...
Generating C:\Users\north\Desktop\Java\Random\doc\index.html...
Generating C:\Users\north\Desktop\Java\Random\doc\stylesheet.css...
1 warning
